# SistemaHotel

./: README.md  test.cpp
App/: CMakeLists.txt  app.cpp  app.h  controller.cpp  controller.h  hotelapi.cpp  hotelapi.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  model.cpp  model.h
AppQt/: AppQt.pro  app.cpp  app.h  appcontroller.cpp  appcontroller.h  appmodel.cpp  appmodel.h  appview.cpp  appview.h  appview.ui  hotelapi.cpp  hotelapi.h  main.cpp  table.cpp  table.h  table.ui
AppTest/: CMakeLists.txt  hotelapi.cpp  hotelapi.h  main copy.cpp  main.cpp
project/: requisitos.txt
sishotel/apps/api/: models.py  serializers.py  tools.py  urls.py  views.py
sishotel/apps/api/migrations/: 0001_initial.py
sishotel/apps/home/: views.py
sishotel/core/: settings.py  urls.py
sishotel/static/scripts/: consts.js  home.js  mainview.js
sishotel/static/scripts/components/: table.js
sishotel/static/styles/: home.css
sishotel/templates/: base.html  home.html  home.reservas.html  mainview.html
sishotel/tests/component/: consts.js  index.html  table.css  table.js
sishotel/tests/home/: index.html  script.js  style.css  tableReservas.js
tests/Test1/: CMakeLists.txt
tests/Test2/: CMakeLists.txt  hotelapi.h
tests/Test2 copy/: hotelapi.cpp  main.cpp
